
Tue Jan 8 12:18:35 EDT 2013 (morgan)
------------------------------------
 * Fix for CL_ENULLARG reported in regression run of 0021468992.gz

Tue Jan 2 16:06:10 EDT 2013 (dar)
----------------------------------
 * bb#5324 - restore decompression of compressed Flash files

Thu Dec 27 16:52:14 EDT 2012 (dar)
-------------------------------------
 * bb #6478: better return code for truncated ARJ

Thu Dec 27 15:23:45 EDT 2012 (morgan)
-------------------------------------
 * fix regression test 0051207685.gz bsd crash

Wed Dec 26 15:04:28 EDT 2012 (morgan)
-------------------------------------
 * fix to bb1891 patch(edge of buffer problem)

Wed Dec 19 17:15:57 EDT 2012 (swebb)
-------------------------------------
 * downgrade cacheset_remove node-not-found to debug level

Tue Dec 18 13:21:26 EDT 2012 (dar)
-------------------------------------
 * bb #6440: truncated ISO should cause format error not write error

Mon Dec 17 18:47:12 EDT 2012 (morgan)
-------------------------------------
 * fix loop in cab file processing: ensure window position within frame

Mon Dec 17 16:44:16 EDT 2012 (dar)
-------------------------------------
 * pdf: empty key safety check

Mon Dec 17 11:12:11 EDT 2012 (dar)
-------------------------------------
 * pdf: continue to next object after single object error

Mon Dec 17 11:08:50 EDT 2012 (morgan)
-------------------------------------
 * revert bb1636: causes too many false positives

Fri Dec 7 19:54:59 EDT 2012 (dar)
------------------------------------
 * freshclam: add defines for major return codes

Fri Dec 7 11:09:10 EDT 2012 (morgan)
------------------------------------
 * performance statistics for bytecode hooks

Thu Dec 6 12:36:21 EDT 2012 (morgan)
------------------------------------
 * windows-friendly bytecode stats

Wed Dec 5 18:48:52 EDT 2012 (morgan)
------------------------------------
 * Add bytecode performance statistics

Mon Dec 3 13:54:28 EDT 2012 (swebb)
-------------------------------------