@@ -1035,6 +1035,8 @@ const char *cl_engine_get_str(const struct cl_engine *engine,
 	      files).
 	\item \textbf{CL\_SCAN\_PDF}\\
 	      Enables scanning within PDF files.
+	\item \textbf{CL\_SCAN\_SWF}\\
+	      Enables scanning within SWF files, notably compressed SWF.
 	\item \textbf{CL\_SCAN\_PE}\\
 	      This flag enables deep scanning of Portable Executable files and
 	      allows libclamav to unpack executables compressed with run-time
