@@ -296,6 +296,12 @@ Example
 # Default: yes
 #ScanPDF yes
 
+# This option enables scanning within SWF files.
+# If you turn off this option, the original files will still be scanned, but
+# without decoding and additional processing.
+# Default: yes
+#ScanSWF yes
+
 
 ##
 ## Mail files
